# visualizador-precio-luz-esp32

./: README.md  sdkconfig.old
components/CalEPD/: CMakeLists.txt  epd.cpp
components/CalEPD/include/: epd.h
components/CalEPD/models/color/: gdeh042Z96.cpp
main/: CMakeLists.txt  display.cpp  idf_component.yml  tasks.cpp  time_sync.c  visualizador_precio_luz.cpp
main/include/: display.h  state.h  tasks.h  time_sync.h
